# everybody.codes

./: Cargo.toml
benches/: events_bench.rs
src/: lib.rs  main.rs
src/algo/: math.rs  strings.rs  union_find.rs
src/e2024/: q01.rs  q02.rs  q03.rs  q04.rs  q05.rs
src/e2025/: q00.rs  q01.rs  q02.rs  q03.rs  q04.rs  q05.rs  q06.rs  q07.rs  q08.rs  q09.rs  q10.rs  q11.rs  q12.rs  q13.rs  q14.rs  q15.rs
src/s01/: q01.rs  q02.rs  q03.rs
src/s02/: q01.rs  q02.rs  q03.rs
