[package]
name = "everybody_codes"
version = "0.1.0"
edition = "2024"
default-run = "everybody_codes"

[dependencies]
hungarian = "1.1.1"
itertools = "0.14.0"
num-complex = "0.4.6"
rayon = "1.11.0"
wide = "0.8.1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "events_bench"
harness = false
